# Typus

./: -  .gitignore  250919.typus  250919_minimal.typus  250919_simplified.typus  250921.typus  250921_generated  Cargo.toml  DEBUG_GUIDE.md  Makefile  Makefile.comprehensive  README.md  README_COMPREHENSIVE_TEST.md  all_syntax.typus  closure_test.typus  comparison.txt  compiler_fix.hs  complex_features.typus  complex_typus.txt  comprehensive_go_syntax.typus  comprehensive_go_syntax_complete.typus  comprehensive_go_syntax_final_v4  comprehensive_go_syntax_full.typus  comprehensive_go_syntax_go  comprehensive_go_syntax_go_fixed  comprehensive_go_syntax_test.typus  comprehensive_go_syntax_typus_fixed_go  comprehensive_go_syntax_typus_go  comprehensive_go_test.typus  debug-cli.hs  debug-cmd.hs  debug-example  debug-example.hi  debug-example.hs  debug-example.md  debug-guide.md  debug.typus  debug_borrowing.hs  debug_borrowing2.hs  debug_builtin_check.hs  (+124 more)
.stack-work/: stack.sqlite3
app/: CompilerTest.hs  DependentTypesTest.hs  Main.hs  Main.hs.backup  MinimalCompilerTest.hs  ParserTest.hs  TypusCompilationTest.hs  parser_directive_check.hs  parser_directive_check_simple.hs  parser_test2.hs  test_parser.hs  test_parser_fix.hs
coverage-report/: basic-report.txt  module-report.txt  summary.json  uncovered.txt
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
docs/: ERROR_HANDLING.md  ERROR_HANDLING_IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  TEST_FIXES_SUMMARY.md  TYPE_SYSTEM_TESTS.md  TYPE_SYSTEM_TEST_SUMMARY.md
examples/: 250913  250913.typus  advanced_type_system.typus  combined_features.typus  comprehensive_go_syntax.typus  comprehensive_go_syntax_simple.typus  comprehensive_go_syntax_test.typus  comprehensive_go_syntax_test_converted  comprehensive_stack_test.typus  concurrent_programming.typus  data_structures_algorithms.typus  debug_clean_logic.py  debug_cleaning.hs  debug_complete_flow.py  debug_complex_case.hs  debug_content_analysis.py  debug_generate_imports.hs  debug_has_runtime.hs  debug_parsing.hs  debug_tab_line.py  debug_typus_flow.hs  debug_typus_process.py  dependent_types_matrix.typus  dependent_types_non_empty_slice.typus  dependent_types_safe_divide.typus  error_handling_demo.typus  fix_clean_blocks.py  fix_clean_blocks_full.py  fix_cleaning.py  fix_compiler.hs  fix_import_blocks.py  fix_remove_import_block.py  fix_runtime.py  fix_tab_import.py  fix_tab_runtime.py  go.mod  go250923output_fixed2  go250923output_fixed3  go250923output_fixed4  hello_typus.typus  (+36 more)
examples/go250923/: algorithms.typus  calculator.typus  concurrency_patterns.typus  concurrent.typus  cryptography.typus  data_structures.typus  database_patterns.typus  design_patterns.typus  error_handling.typus  file_operations.typus  functional_patterns.typus  hello.typus  interfaces.typus  json_processing.typus  networking.typus  reflection.typus  statistics.typus  string_processing.typus  structs.typus  test.db  testing_patterns.typus
scripts/: coverage-report.sh  e2e-test.sh  production-test.sh
src/: AnalyzerIntegration.hs  Cli.hs  CommandLineDebug.hs  Compiler.hs  Compiler.hs.backup  CompilerEnhanced.hs  CompilerUtils.hs  Compiler_backup.hs  Compiler_fixed.hs  Compiler_original.hs  Compiler_original_complex.hs  Compiler_simple.hs  Debug.hi  Debug.hs  DebugIntegration.hs  Dependencies.hi  Dependencies.hs  DependentTypesParser.hs  EnhancedErrorHandler.hs  ErrorHandler.hs  IntegratedCompiler.hs  Ownership.hi  Ownership.hs  OwnershipAdvanced.hs  OwnershipComprehensive.hs  OwnershipControlFlow.hs  OwnershipControlFlowEnhanced.hs  OwnershipControlFlowFixed.hs  OwnershipFixed.hs  Parser.hs  ParserEnhanced.hs  SimpleSyntaxValidator.hs  SourceLocation.hs  SyntaxValidator.hs  Utils.hs  ast.rs  code_generator.rs  compiler.rs  error.rs  ir_generator.rs  (+8 more)
test/: BenchmarkRunner.hs  BenchmarkTests.hs  CLICommandTests.hs  ComprehensiveCompilerTest.hs  ComprehensiveStackTest.hs  ComprehensiveTestSuite.hs  ComprehensiveUnitTests.hs  ConversionTest.hs  DependentTypesAndVectorTests.hs  DependentTypesTests.hs  DirectiveParsingTests.hs  EndToEndTests.hs  EnhancedErrorHandlerTest.hs  EnhancedOwnershipTests.hs  EnhancedPreciseTypeTests.hs  EnhancedStackTest.hs  IntegrationTests.hs  OwnershipAnalysisTests.hs  OwnershipTransferTests.hs  PerformanceTests.hs  PreciseTypeTests.hs  ProductionTests.hs  RunEnhancedOwnershipTests.hs  RunEnhancedOwnershipTestsMain.hs  RunEnhancedPreciseTypeTests.hs  RunTypeSystemTests.hs  StackCompilerTest.hs  TestCompiler.hs  TestOwnership.hs  TestParser.hs  TestSuite.hs  TestSuiteFixed.hs  TypeInferenceTests.hs  TypeSystemIntegrationTests.hs  TypeSystemTestSuite.hs  TypeSystemTests.hs  TypusCompilationTest.hi  TypusCompilationTest.hs  debug_ownership_file_directive  debug_ownership_minimal  (+5 more)
test/data/: advanced_ownership.typus  array_ownership_code.typus  borrow_while_moved_code.typus  borrowing_code.typus  boundary_conditions.typus  code_with_block_directives.typus  code_with_dependent_types.typus  code_with_directives.typus  complex_ownership_code.typus  complex_type_code.typus  comprehensive_go_syntax.typus  comprehensive_typus_syntax.typus  concurrent_code.typus  conditional_ownership_code.typus  crypto_usage_code.typus  double_move_code.typus  edge_case_code.typus  edge_case_ownership.typus  error_scenarios.typus  function_parameter_code.typus  heredoc_code.typus  import_error_code.typus  large_code.typus  loop_ownership_code.typus  malformed_code.typus  malformed_syntax_code.typus  memory_management.typus  mixed_directives_code.typus  mutable_borrowing_code.typus  nested_blocks_code.typus  nested_function_code.typus  no_ownership_code.typus  no_violations_code.typus  ownership_output.golden  parser_output.golden  performance_test.typus  python_features_code.typus  return_ownership_code.typus  scope_based_code.typus  simple_ownership_code.typus  (+10 more)
test/output/: code_with_dependent_types.output  compiler_output.actual  (+4 more)
test_input/: data_structures_algorithms.typus
test_temp/: test_output  typus_test_output
(+85 files in other folders)
