[package]
name = "typusc"
version = "0.1.0"
edition = "2021"
authors = ["qwe12345678"]
description = "A compiler for Typus, a language based on Golang with Idris-like dependent types and Rust-like ownership"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
colored = "2.0"
rayon = "1.8"
tempfile = "3.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
